--- a/TravelExpenses/Views/Comprobacion/Detalles.cshtml
+++ b/TravelExpenses/Views/Comprobacion/Detalles.cshtml
@@ -24,7 +24,7 @@
     <div class="card">
         <div class="card-body">
 
-            <form method="post" asp-controller="Comprobacion" asp-action="Detalles">
+            <form method="post" asp-controller="Aprobador" asp-action="Detalles">
 
                 <div class="form-group">
                     <div class="row">
@@ -52,6 +52,8 @@
         </div>
     </div>
 </div>
+
+
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
@@ -59,7 +61,7 @@
                 <h3 style="color:red;"> @ViewBag.Mensaje</h3>
                 <div class="row">
                     <div class="col-5">
-                        <a asp-controller="Comprobacion" asp-action="ComprobacionSolicitud" class="btn" id="Button">Cerrar</a>
+                        <a asp-controller="Aprobador" asp-action="AprobarSolicitud" class="btn" id="Button">Cerrar</a>
 
                     </div>
                     <div class="col">
@@ -67,122 +69,268 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="tab-content">
 
-            <div class="tab-content">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#Destinos">Comprobantes </a>
-                    </li>
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" data-toggle="tab" href="#Destinos">Comprobantes </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#Gastos">Gastos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" data-toggle="tab" href="#Comentarios">Comentarios</a>
+                        </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#Comentarios">Comentarios</a>
-                    </li>
+                    </ul>
+                    <div id="Destinos" class="container tab-pane active">
+                        <div class="table-responsive">
 
-                </ul>
-
-                <div id="Destinos" class="container tab-pane active">
-                    <div class="table-responsive">
-                        <table id="data-table-basic" class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th>
-                                    Folio
-                                </th>
-                                <th>
-                                    UUID
-                                </th>
-                                <th>
-                                    Fecha
-                                </th>
-                                <th>
-                                    RFC
-                                </th>
-                                <th>
-                                    Proveedor
-                                </th>
-                                <th>
-                                    Moneda
-                                </th>
-                                <th>
-                                    Subtotal
-                                </th>
-                                <th>
-                                    Impuestos
-                                </th>
-                                <th>
-                                    Total
-                                </th>
-                                <th>
-                                    Detalles
-                                </th>
-                                <th>
-                                    Descargar
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody id="tblComprobantes">
-                            @if (Model.Comprobantes != null)
-                            {
-                                foreach (var comprobante in Model.Comprobantes)
-                                {
+                            <table id="data-table-basic" class="table table-striped">
+                                <thead>
                                     <tr>
-                                        <td>@comprobante.Folio</td>
-                                        <td>@comprobante.UUID</td>
-                                        <td>@comprobante.Fecha</td>
-                                        <td>@comprobante.RFC</td>
-                                        <td>@comprobante.NombreProveedor</td>
-                                        <td>@comprobante.Moneda</td>
-                                        <td>@string.Format("{0:C}", comprobante.SubTotal)</td>
-                                        <td>@string.Format("{0:C}", comprobante.Impuestos)</td>
-                                        <td>@string.Format("{0:C}", comprobante.Total)</td>
-                                        <td>
-                                            <a class="btn btn-lg" asp-controller="Aprobador" asp-action="DetallesComprobacion" asp-route-UUID="@comprobante.UUID">
-                                                <i class="fas fa-edit"></i>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Download" asp-route-UUID="@comprobante.UUID">
-                                                <i class="fas fa-file-download"></i>
-                                            </a>
-                                        </td>
+                                        <th>
+                                            Folio
+                                        </th>
+                                        <th>
+                                            UUID
+                                        </th>
+                                        <th>
+                                            Fecha
+                                        </th>
+                                        <th>
+                                            RFC
+                                        </th>
+                                        <th>
+                                            Proveedor
+                                        </th>
+                                        <th>
+                                            Moneda
+                                        </th>
+                                        <th>
+                                            Total
+                                        </th>
+                                        <th>
+                                            Importe Comprobado
+                                        </th>
+                                        <th>
+                                            Detalles
+                                        </th>
+                                        <th>
+                                            Descargar
+                                        </th>
+                                        <th>
+                                            Abir PDF
+                                        </th>
                                     </tr>
-                                }
-                            }
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody id="tblComprobantes">
+                                    @if (Model.Comprobantes != null)
+                                    {
+                                        foreach (var comprobante in Model.Comprobantes)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @if (!string.IsNullOrEmpty(comprobante.MensajeError))
+                                                    {
+                                                        <label class="alert-danger">comprobante.MensajeError</label>
+                                                    }
+                                                    @comprobante.Folio
+                                                </td>
+                                                <td>@comprobante.UUID</td>
+                                                <td>@comprobante.Fecha.ToShortDateString()</td>
+                                                <td>@comprobante.RFC</td>
+                                                <td>@comprobante.NombreProveedor</td>
+                                                <td>@comprobante.Moneda</td>
+                                                <td>@string.Format("{0:C}", @comprobante.Total)</td>
+                                                <td>@string.Format("{0:C}", @comprobante.ImporteComprobado)</td>
+                                                <td align="center">
+                                                    <a class="btn btn-lg" asp-controller="Comprobacion" asp-action="DetallesComprobacion" asp-route-UUID="@comprobante.UUID">
+                                                        <i class="fas fa-edit"></i>
+                                                    </a>
+                                                </td>
+                                                <td align="center">
+                                                    <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Download" asp-route-UUID="@comprobante.UUID">
+                                                        <i class="fas fa-file-download"></i>
+                                                    </a>
+                                                </td>
+                                                <td align="center">
+                                                    @if (comprobante.Archivos.Find(archivo => archivo.UUID.Equals(comprobante.UUID)).Extension.Equals(".pdf"))
+                                                    {
+                                                        <a class="btn btn-lg" href="#" onclick="GetClientReport('@comprobante.Archivos.Find(archivo => archivo.UUID.Equals(comprobante.UUID)).Ruta.Replace('\\', '/')')">
+                                                            <i class="fas fa-file-download"></i>
+                                                        </a>
+                                                    }
+                                                    else
+                                                    {
+                                                        <a class="btn btn-lg">
+                                                            <i class="fas fa-ban "></i>
+                                                        </a>
+                                                    }
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
 
+
+                            @*<table id="data-table-basic" class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>
+                            Folio
+                        </th>
+                        <th>
+                            UUID
+                        </th>
+                        <th>
+                            Fecha
+                        </th>
+                        <th>
+                            RFC
+                        </th>
+                        <th>
+                            Proveedor
+                        </th>
+                        <th>
+                            Moneda
+                        </th>
+                        <th>
+                            Subtotal
+                        </th>
+                        <th>
+                            Impuestos
+                        </th>
+                        <th>
+                            Total
+                        </th>
+                        <th>
+                            Detalles
+                        </th>
+                        <th>
+                            Descargar
+                        </th>
+                    </tr>
+                    </thead>
+                    <tbody id="tblComprobantes">
+                    @if (Model.Comprobantes != null)
+                    {
+                        foreach (var comprobante in Model.Comprobantes)
+                        {
+                            <tr>
+                                <td>@comprobante.Folio</td>
+                                <td>@comprobante.UUID</td>
+                                <td>@comprobante.Fecha</td>
+                                <td>@comprobante.RFC</td>
+                                <td>@comprobante.NombreProveedor</td>
+                                <td>@comprobante.Moneda</td>
+                                <td>@string.Format("{0:C}", comprobante.SubTotal)</td>
+                                <td>@string.Format("{0:C}", comprobante.Impuestos)</td>
+                                <td>@string.Format("{0:C}", comprobante.Total)</td>
+                                <td>
+                                    <a class="btn btn-lg" asp-controller="Aprobador" asp-action="DetallesComprobacion" asp-route-UUID="@comprobante.UUID">
+                                        <i class="fas fa-edit"></i>
+                                    </a>
+                                </td>
+                                <td>
+                                    <a class="btn btn-lg" asp-controller="Rembolso" asp-action="Download" asp-route-UUID="@comprobante.UUID">
+                                        <i class="fas fa-file-download"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                        }
+                    }
+                    </tbody>
+                </table>*@
+
+                        </div>
                     </div>
-                </div>
-                <div id="Comentarios" class="container tab-pane fade">
-                    <br>
-                    <h3>Comentarios</h3>
 
-                    <div class="container">
+                    <div id="Comentarios" class="container tab-pane fade">
+                        <br>
+                        <h3>Comentarios</h3>
+
                         <div class="table table-responsive">
                             <table class="table table-hover text-center">
                                 <thead>
 
-                                <tr>
-                                    <th>#</th>
-                                    <th>Comentario</th>
-
-                                </tr>
-                                </thead>
-                                <tbody>
-                                @foreach (var g in @Model.comentarios)
-                                {
                                     <tr>
-                                        <td>@g.IdComentarios</td>
-                                        <td>@g.Comentario</td>
+                                        <th>#</th>
+                                        <th>Comentario</th>
 
                                     </tr>
-                                }
+                                </thead>
+                                <tbody>
+                                    @foreach (var g in @Model.comentarios)
+                                    {
+                                        <tr>
+                                            <td>@g.IdComentarios</td>
+                                            <td>@g.Comentario</td>
+
+                                        </tr>
+                                    }
                                 </tbody>
                             </table>
                         </div>
                     </div>
-                </div>
+                    <div id="Gastos" class="container tab-pane fade">
 
+                        <br>
+                        <h3>Gastos</h3>
+
+                        <div class="container">
+                            <div class="row">
+                                <div class="table-responsive">
+                                    <table class="table table-hover text-center">
+                                        <thead>
+
+                                            <tr>
+                                                <th>Concepto </th>
+                                                <th>Monto Máximo Permitido</th>
+                                                <th>Importe Solicitado </th>
+                                                <th>Importe Comprobado </th>
+                                                <th>Moneda</th>
+                                                <th>Tipo de Cambio </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            @foreach (var g in @Model.MisGastos)
+                                            {
+                                                <tr>
+
+                                                    <td>@g.Nombre</td>
+
+
+                                                    <td>@string.Format("{0:C}", @g.MontoMaximo)</td>
+                                                    @if (@g.MontoMaximo < @g.ImporteSolicitado)
+                                                    {
+                                                        <td style="color:red;">@string.Format("{0:C}", @g.ImporteSolicitado)</td>
+                                                    }
+                                                    else
+                                                    {
+                                                        <td style="color:green;">@string.Format("{0:C}", @g.ImporteSolicitado)</td>
+                                                    }
+                                                    <td>@string.Format("{0:C}", @g.CantidadComprobada) </td>
+                                                    <td>@g.Descripcion</td>
+                                                    <td>@g.TipoCambios</td>
+
+
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <br />
+                    </div>
+
+
+                </div>
             </div>
         </div>
     </div>
