--- a/TravelExpenses/Views/Aprobador/DetallesComprobacion.cshtml
+++ b/TravelExpenses/Views/Aprobador/DetallesComprobacion.cshtml
@@ -2,10 +2,23 @@
 
 <h1>Detalles del Comprobante</h1>
 
-<form method="post" asp-action="Details" role="form">
+<form method="post" asp-action="" role="form">
     <div class="col-12 grid-margin stretch-card">
+        
+
         <div class="card">
             <div class="card-body">
+                <div class="form-group">
+                    <h3 style="color:red;"> @ViewBag.Mensaje</h3>
+                    <div class="row">
+                        <div class="col-5">
+                            <a asp-controller="Aprobador" asp-action="Detalles" asp-route-Folio="@Model.Comprobante.FolioSolicitud" class="btn" id="Button">Cerrar</a>
+                        </div>
+                        <div class="col">
+                            <h3>@ViewBag.Script</h3>
+                        </div>
+                    </div>
+                </div>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 @if (!string.IsNullOrEmpty(Model.Error))
                 {
@@ -20,19 +33,19 @@
                 <div class="form-group">
                     <div class="row">
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
-                            <input type="hidden" asp-for="@Model.Comprobante.FolioSolicitud" />
+                            <input type="hidden" asp-for="@Model.Comprobante.FolioSolicitud"/>
                             <label class="control-label">UUID</label>
-                            <input  readonly="readonly" asp-for=@Model.Comprobante.UUID class="form-control" placeholder="UUID" />
+                            <input readonly="readonly" asp-for=@Model.Comprobante.UUID class="form-control" placeholder="UUID"/>
                             <span asp-validation-for=@Model.Comprobante.UUID class="text-danger"></span>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <label class="control-label">Folio</label>
-                            <input readonly="readonly" asp-for=@Model.Comprobante.Folio class="form-control" placeholder="Folio" />
+                            <input readonly="readonly" asp-for=@Model.Comprobante.Folio class="form-control" placeholder="Folio"/>
                             <span asp-validation-for=@Model.Comprobante.Folio class="text-danger"></span>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                             <label class="control-label">Fecha</label>
-                            <input asp-for=@Model.Comprobante.Fecha class="form-control" placeholder="RFC de la Empresa" readonly />
+                            <input asp-for=@Model.Comprobante.Fecha class="form-control" placeholder="RFC de la Empresa" readonly/>
                             <span asp-validation-for=@Model.Comprobante.Fecha class="text-danger"></span>
                         </div>
                     </div>
@@ -121,78 +134,75 @@
                 </div>
 
             }
-
-          
-
             <div class="card-body">
                 <div class="table-responsive">
-                    <table id="data-table-basic" class="table table-striped">
+                    <table id="data" class="table table-striped">
                         <thead>
-                            <tr>
-                                <th>
-                                    Descripción
-                                </th>
-                                <th>
-                                    Descripción SAT
-                                </th>
-                                <th>
-                                    Importe
-                                </th>
-                                <th>
-                                    Valor Unitario
-                                </th>
-                                <th>
-                                    Unidad
-                                </th>
-                                <th>
-                                    Cantidad
-                                </th>
-                                <th>
-                                    Gasto
-                                </th>
-                            </tr>
+                        <tr >
+                            <th>
+                                Descripción
+                            </th>
+                            <th>
+                                Descripción SAT
+                            </th>
+                            <th>
+                                Importe
+                            </th>
+                            <th>
+                                Valor Unitario
+                            </th>
+                            <th>
+                                Unidad
+                            </th>
+                            <th>
+                                Cantidad
+                            </th>
+                            <th>
+                                Gasto
+                            </th>
+                        </tr>
                         </thead>
                         <tbody id="tblComprobantes">
-                            @if (Model.Comprobante.Conceptos != null && @Model.Comprobante.Conceptos.Count > 0)
+                        @if (Model.Comprobante.Conceptos != null && @Model.Comprobante.Conceptos.Count > 0)
+                        {
+                            for (int i = 0; i < Model.Comprobante.Conceptos.Count(); i++)
                             {
-                                for (int i = 0; i < Model.Comprobante.Conceptos.Count(); i++)
-                                {
 
-                                    <tr>
-                                        <td>
-                                            <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" readonly/>
-                                            <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].NoIdentificacion" readonly/>
+                                <tr>
+                                    <td >
+                                        <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" readonly/>
+                                        <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].NoIdentificacion" readonly/>
 
-                                            <input asp-for="@Model.Comprobante.Conceptos[i].Descripcion" id="Descripcion" class="control-label" readonly="readonly" />
-                                        </td>
-                                        <td>
-                                            <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].ClaveProdServ" />
-                                            <input asp-for="@Model.Comprobante.Conceptos[i].DescripcionProdServ" id="DescripcionProdServ" class="control-label" readonly="readonly" />
-                                        </td>
-                                        <td>
-                                            <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto" />
-                                            <label class="alert-danger">@Model.Comprobante.Conceptos[i].MensajeError</label>
-                                            <input asp-for="@Model.Comprobante.Conceptos[i].Importe" id="Importe" class="control-label" readonly="readonly" />
-                                        </td>
-                                        <td>
-                                            <input asp-for="@Model.Comprobante.Conceptos[i].ValorUnitario" id="ValorUnitario" class="control-label" readonly="readonly" />
-                                        </td>
-                                        <td>
-                                            <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].ClaveUnidad" />
-                                            <input asp-for="@Model.Comprobante.Conceptos[i].Unidad" id="Unidad" class="control-label" readonly="readonly" />
-                                        </td>
-                                        <td>
-                                            <input asp-for="@Model.Comprobante.Conceptos[i].Cantidad" id="Cantidad" class="control-label" readonly="readonly" />
-                                        </td>
-                                        <td>
-                                            <select asp-for="@Model.Comprobante.Conceptos[i].IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
-                                                    asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))" disabled>
-                                                <option value="">--Seleccione un Gasto</option>
-                                            </select>
-                                        </td>
-                                    </tr>
-                                }
+                                        @Model.Comprobante.Conceptos[i].Descripcion
+                                    </td>
+                                    <td>
+                                        <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].ClaveProdServ"/>
+                                        @Model.Comprobante.Conceptos[i].DescripcionProdServ
+                                    </td>
+                                    <td>
+                                        <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].IdConcepto"/>
+                                        <label class="alert-danger">@Model.Comprobante.Conceptos[i].MensajeError</label>
+                                        @string.Format("{0:C}", Model.Comprobante.Conceptos[i].Importe)
+                                    </td>
+                                    <td>
+                                        @Model.Comprobante.Conceptos[i].ValorUnitario
+                                    </td>
+                                    <td>
+                                        <input type="hidden" asp-for="@Model.Comprobante.Conceptos[i].ClaveUnidad"/>
+                                        @Model.Comprobante.Conceptos[i].Unidad
+                                    </td>
+                                    <td>
+                                        @string.Format("{0:C}", Model.Comprobante.Conceptos[i].Cantidad)
+                                    </td>
+                                    <td>
+                                        <select asp-for="@Model.Comprobante.Conceptos[i].IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
+                                                asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))" disabled>
+                                            <option value="">--Seleccione un Gasto</option>
+                                        </select>
+                                    </td>
+                                </tr>
                             }
+                        }
                         </tbody>
                     </table>
 
