--- a/TravelExpenses/Views/Comprobacion/DetallesComprobacion.cshtml
+++ b/TravelExpenses/Views/Comprobacion/DetallesComprobacion.cshtml
@@ -6,6 +6,17 @@
     <div class="col-12 grid-margin stretch-card">
         <div class="card">
             <div class="card-body">
+                <div class="form-group">
+                    <h3 style="color:red;"> @ViewBag.Mensaje</h3>
+                    <div class="row">
+                        <div class="col-5">
+                            <a asp-controller="Comprobacion" asp-action="Detalles" asp-route-Folio="@Model.Comprobante.FolioSolicitud" class="btn" id="Button">Cerrar</a>
+                        </div>
+                        <div class="col">
+                            <h3>@ViewBag.Script</h3>
+                        </div>
+                    </div>
+                </div>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 @if (!string.IsNullOrEmpty(Model.Error))
                 {
