--- a/TravelExpenses/Views/Comprobacion/SolicitudCerradas.cshtml
+++ b/TravelExpenses/Views/Comprobacion/SolicitudCerradas.cshtml
@@ -8,10 +8,38 @@
 
 <div class="col-12 grid-margin stretch-card">
     <div class="card">
+        <div class="card-body">
+            <div class="col-4">
+                <select asp-for="Estatus.IdEstatus" class="form-control input-sm" id="estatus" onchange="ObtenerSolcitudes()"
+                        asp-items="@(new SelectList(Model.Estatuses, "IdEstatus", "Status"))">
+                    <option value="">--Seleccionar estatus</option>
+                    <option value="">Todos</option>
+                </select>
+                
+            </div>
+            <br/>
+            <div class="row">
+                <div class="col-2">
+                    Fecha Inicio
+                    <input type="date" class="form-control" />
+                </div>
+                <div class="col-2">
+                    Fecha Fin
+                    <input type="date" class="form-control" />
+                </div>
+                <div class="col-2">
+                    <br/>
+                    <input type="button" class="btn btn-primary" value="Buscar" />
+                </div>
+                <div class="col-sm-3 col-sm-offset-5">
+                    <button type="button" id="boton_enviar" onclick='fnExcelReport();' class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> Exportar</button>
+                </div>
+            </div>
 
+        </div>
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-striped">
+                <table class="table table-striped" id ="tabla2">
                     <thead>
                         <tr>
                             <th>Folio</th>
@@ -52,7 +80,7 @@
         </div>
     </div>
 </div>
-
+<iframe id="txtArea1" style="display:none"></iframe>
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script type="text/javascript">
 
@@ -79,17 +107,17 @@
                         if (item.estatus == "PorLiberar") {
                             row +=
                                 '<tr>'
-                                    + '<td>' + item.folio +'</td>'
-                                    + '<td>' + item.descripcion +'</td>'
-                                    + '<td>' + item.userName +'</td>'
-                                    + '<td>' + item.importeSolicitadoC +'</td>'
-                                    + '<td>' + item.importeComprobadoC +'</td>'
-                                    + '<td>' + item.estatus+'</td>'
-                                    + '<td>'
-                            +'<a class="btn btn-lg" href="/Comprobacion/DetallesPorAutorizar?folio=' + item.folio + '">'
-                                        + "<i class='fas fa-edit'></i>"
-                                        +'</a>'
-                                    +'</td>'
+                                + '<td>' + item.folio +'</td>'
+                                + '<td>' + item.descripcion +'</td>'
+                                + '<td>' + item.userName +'</td>'
+                                + '<td>' + item.importeSolicitadoC +'</td>'
+                                + '<td>' + item.importeComprobadoC +'</td>'
+                                + '<td>' + item.estatus+'</td>'
+                                + '<td>'
+                                +'<a class="btn btn-lg" href="/Comprobacion/DetallesPorAutorizar?folio=' + item.folio + '">'
+                                + "<i class='fas fa-edit'></i>"
+                                +'</a>'
+                                +'</td>'
                                 +'</tr>';
                         }
                         else if (item.estatus == "Revisada") {
@@ -103,9 +131,25 @@
                                 + '<td>' + item.importeComprobadoC +'</td>'
                                 + '<td>' + item.estatus+'</td>'
                                 + '<td>'
-                            +'<a class="btn btn-lg"  href="/Comprobacion/Detalles?folio=' + item.folio + '">'
-                                    + "<i class='fas fa-edit'></i>"
-                                    +'</a>'
+                                +'<a class="btn btn-lg"  href="/Comprobacion/Detalles?folio=' + item.folio + '">'
+                                + "<i class='fas fa-edit'></i>"
+                                +'</a>'
+                                +'</td>'
+                                +'</tr>';
+                        } else if (item.estatus == "Cerrada") {
+
+                            row +=
+                                '<tr>'
+                                + '<td>' + item.folio +'</td>'
+                                + '<td>' + item.descripcion +'</td>'
+                                + '<td>' + item.userName +'</td>'
+                                + '<td>' + item.importeSolicitadoC +'</td>'
+                                + '<td>' + item.importeComprobadoC +'</td>'
+                                + '<td>' + item.estatus+'</td>'
+                                + '<td>'
+                                +'<a class="btn btn-lg"  href="/Comprobacion/DetallesSolicitudCerradas?folio=' + item.folio + '">'
+                                + "<i class='fas fa-edit'></i>"
+                                +'</a>'
                                 +'</td>'
                                 +'</tr>';
                         }
@@ -127,4 +171,40 @@
         });
         $('.dataTables_length').addClass('bs-select');
     });
+</script>
+
+<script type="text/javascript">
+    function fnExcelReport() {
+        var tab_text = "<table border='2px'><tr>";
+        var textRange; var j = 0;
+        tab = document.getElementById('tabla2'); // id of table
+
+        for (j = 0; j < tab.rows.length; j++) {
+                tab_text = tab_text + "<th>" + tab.rows[j].cells[0].innerHTML + "</th>";
+                tab_text = tab_text + "<th >" + tab.rows[j].cells[1].innerHTML + "</th>";
+                tab_text = tab_text + "<th >" + tab.rows[j].cells[2].innerHTML + "</th></tr>";
+        }
+
+        tab_text = tab_text + "</table>";
+        tab_text = tab_text.replace(/<A[^>]*>|<\/A>/g, "");//remove if u want links in your table
+        tab_text = tab_text.replace(/<img[^>]*>/gi, ""); // remove if u want images in your table
+        tab_text = tab_text.replace(/<input[^>]*>|<\/input>/gi, ""); // reomves input params
+
+        var ua = window.navigator.userAgent;
+        var msie = ua.indexOf("MSIE ");
+        debugger;
+        if (msie > 0 || !!navigator.userAgent.match(/Trident.*rv\:11\./))      // If Internet Explorer
+        {
+            txtArea1.document.open("txt/html", "replace");
+            txtArea1.document.write(tab_text);
+            txtArea1.document.close();
+            txtArea1.focus();
+            sa = txtArea1.document.execCommand("SaveAs", true, "download.xls");
+        }
+        else                 //other browser not tested on IE 11
+            sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text));
+
+
+        return (sa);
+    }
 </script>
